--- a/app/src/main/res/layout/life_index.xml
+++ b/app/src/main/res/layout/life_index.xml
@@ -24,7 +24,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp">
+            android:layout_marginTop="20dp"
+            android:baselineAligned="false">
 
             <RelativeLayout
                 android:layout_width="0dp"
@@ -37,7 +38,8 @@
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:layout_marginStart="20dp"
-                    android:src="@drawable/ic_coldrisk" />
+                    android:src="@drawable/ic_coldrisk"
+                    android:contentDescription="@null" />
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -75,7 +77,8 @@
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:layout_marginStart="20dp"
-                    android:src="@drawable/ic_dressing" />
+                    android:src="@drawable/ic_dressing"
+                    android:contentDescription="@null" />
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -107,7 +110,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp">
+            android:layout_marginBottom="20dp"
+            android:baselineAligned="false">
 
             <RelativeLayout
                 android:layout_width="0dp"
